# UNSW

./: 1.c  README.md  StrPLUS.c  ddos.py  speach.py  tempCodeRunnerFile.c  tempCodeRunnerFile.python  text.txt  wallpaper.c
C#/: C#.code-workspace  Notes.ipynb  Program.cs  迷宫Project 策划.txt
COMP1151/: Notes.c
COMP1151/ass1/: paint.c
COMP1151/ass2/: cspotify.c  cspotify.h  main.c  test_cspotify.c  test_cspotify.h  test_main.c
COMP1151/lab01/: bird.c  kangaroo.c
COMP1151/lab02/: dice_range.c  negative.c  wordAddition.c
COMP1151/lab03/: Task Description  hollow_triangle.c  perfect.c  three_five.c  x.c
COMP1151/lab04/: Task Description  cs_calculator.c  going_electric.c  painterbot.c  reverse_array.c
COMP1151/lab05/: common_elements.c  swap_pointers.c
COMP1151/lab07/: Task Description  decode.c  frequency_analysis.c  substitution.c  swap_case_test.c
COMP1151/lab08/: list_contains.c  list_insert_head.c  list_print.c  list_reverse.c
COMP1151/lab09/: list_delete_contains.c  list_increasing.c  lists_diagonal.c
COMP1151/test01/: confused.c  upside_down.c
COMP1151/test02/: Task Description  middle3.c  remove_duplicates_function.c
COMP1151/test03/: Task Description  array_print_pointer.c
COMP1151/test04/: secret_code.c
COMP1151/test05/: struct_create.c
COMP1151/test06/: list_delete_ordered.c
COMP1511/: Notes.c  README.md  Xzone.c  tree.c
COMP1511/Pracexam/: argv_least_common.c  prac_mc.txt  prac_q1.c  prac_q2.c  prac_q4.c
COMP1511/ass1/: paint.c
COMP1511/ass2/: capture.h  test.txt  test_cspotify.c
COMP1511/ass2 21T1/: beats.c  beats.h  main.c
COMP1511/labs/: prime_factors.c
COMP1521/: Notes.ASM  StrPLUS.c
COMP1521/Ass1/: snake.c  snake.s
COMP1521/Ass2/: shuck  shuck.c  shuck.mk  test.c
COMP1521/EXAM/: final_q0.c  final_q0.mk  final_q0_main.c  final_q1.c  final_q1.mk  final_q1_main.c  final_q2.c  final_q2.s  final_q3.c  final_q3.mk  final_q3_main.c  final_q4.c  final_q4.mk  final_q4_main.c  final_q5.c  final_q5.mk  final_q5_main.c  final_q6.c  final_q6.mk  final_q6_main.c  final_q7.c  final_q7.mk  final_q7_main.c  final_q8.c  final_q8.h  final_q8.mk  final_q8_main.c  final_q8_opcodes.h  final_q9.c  final_q9.s  hello.c  hello.dump  hello.dump.shuf  tina_arena  tina_arena.dump  tina_arena.dump.shuf  utf8_file.txt
COMP1521/SPIM-notes/: HelloWorld.s  add.s  add_memory.s  add_memory_initialized.s  endian.s  load_store_no_label.s  odd_even.s  print10.s  read10.s  strlen_array.s  sum_100_squares.s
COMP1531/: Lec_Notes.ipynb  Python.code-workspace  Q1.py  a.py  codiga.yml  heroes.py  lec_notes.py  requirements-extra.txt  requirements.txt  test_pytest.py
COMP1531/LeTex/: demo.tex
COMP1531/exam/: README.md  acronym.py  acronym_test.py  filter.py  filter_test.py  frequency.py  frequency_test.py  mono.py  mono_test.py  penguin.py  penguin_test.py  q1.txt  q2.txt  q3.txt  q4.txt  q5.txt  q6.txt  q7.txt  requirements.txt  server.py  trouble.py  trouble_test.py  wordsquares.py  wordsquares_test.py
COMP1531/exam-sample/: README.md  dateadjust.py  dateadjust_test.py  factors.py  factors_test.py  q1.txt  q2.txt  q3.txt  q4.txt  q5.txt  q6.txt  questions.py  questions_test.py  roman.py  roman_test.py  server.py  timetable.py  timetable_test.py
COMP1531/project-backend/: .coveragerc  .gitlab-ci.yml  .pylintrc  README.md  assumptions.md  deploy.sh
COMP1531/project-frontend/: README.md  frontend.py  pack.sh  package-lock.json  package.json  run.sh
COMP2041/: 2041.tar  COMP2041.code-workspace  Makefile  Notes.md  PythonNotes.ipynb  example.sh  remove file Ending
COMP2041/Ass1/: test00.sh  test01.sh  test02.sh  (+18 more)
COMP2511/: JAVA Notes.ipynb  Java.code-workspace  RuntimeTypeAdapterFactory.java  async.sh  planning.xmind
COMP3121/: test.py
COMP3141/: Haskell.code-workspace  Haskell自学合集.txt  Main.hs  Notes.hs  xxx.hs
COMP3141/Ass1/Tortoise/: Main.hs  TestSupport.hs  Tests.hs  Tortoise.cabal  Tortoise.hs  TortoiseCombinators.hs  TortoiseGraphics.hs  stack.yaml
COMP3141/Ass2/Hare/: Hare.cabal  Hare.hs  HareMonad.hs  Tests.hs  Untyped.hs  stack.yaml
COMP3141/Ass2/Hare/Tests/: Examples.hs  Support.hs  Transcript.hs  UnitTests.hs  transcript.txt
COMP3141/Labs/Ex01/: Elipses.hs  Ex01.cabal  Ex01.hs  ShapeGraphics.hs  Sharingan.hs
COMP3141/Labs/Ex04/: Ex04.cabal  Ex04.hs  Main.hs
COMP3231/: filesize.py
COMP3311/: Notes  Notes.sql  note.py
COMP3331/: Notes.ipynb
COMP3411/: Cryptarithmetric.pl  Notes.md  climbing.pl  family.pl  test.pl
COMP3900/: Eatery Management System.pptx  Notes.ipynb  Retrospective A.docx  script.ipynb
COMP6080/: COMP6080.code-workspace  Notes.ipynb  countTAG.js  package-lock.json  package.json  test.html
COMP6447/: Notes.md
COMP6733/: .pylintrc  COMP6733.7z  Notes.ipynb  Pipfile  camera.py  data.txt  faceMesh.py  rgb_depth.py  temp.ipynb  temp_vs_dist_scatter_plot.eps  temp_vs_dist_with_fitted_line.eps  temp_vs_dist_without_outliers.eps  thermal.py
COMP6771/: C++.code-workspace  Notes.ipynb
COMP6771/Labs/lab03/lab303/: CMakeLists.txt  README.md
COMP6771/Labs/lab03/lab303/src/: marks.txt  stats.cpp  stats.h  stats.test.cpp
COMP6771/ass1/: CMakeLists.txt  README.md  benchmark
COMP6771/ass1/src/: main.cpp  word_ladder.cpp  word_ladder.h  word_ladder.test.cpp  word_ladder_benchmark.test.cpp
COMP6771/ass3/: CMakeLists.txt  README.md  marking
COMP6771/ass3/doc/: component_slots.dot  example.dot  inheritance_diagram.dot  pipeline_print_example.dot
COMP6771/ass3/src/: client.cpp  pipeline.cpp  pipeline.h  pipeline.test.cpp
COMP6841/: Cross Site Scripting.html  PortScanning.txt
COMP6991/: Jupyter Notebook With Rust.ipynb  Notes.ipynb  Rust.code-workspace
COMP6991/iris/iris/: Cargo.toml  config.toml
COMP6991/iris/iris/src/: main.rs
COMP6991/iris/iris/tests/: integration_test.rs
COMP6991/x_zone/: Cargo.toml
COMP6991/x_zone/src/: main.rs
COMP9517/: Pipfile
lab01/: COMP1511 20T3 - Week 01 Laboratory Exercises.html  bad_pun  bird  kangaroo  task description
lab02/: addition  dice_range  easter  easter.c  is_leap_year  negative  numberWords  numberWords.c  task description  wordAddition
(+2662 files in other folders)
