[package]
name = "x_zone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
###############
# 日志相关
###############
log = "0.4"                 # 日志库
env_logger = "0.10.0"       # 日志库，支持从环境变量中读取配置
pretty_env_logger = "0.5.0" # 日志库，提供更好的日志输出格式
colored = "2.0"             # 终端输出颜色库

###############
# 错误处理相关
###############
anyhow = "1.0"      # 错误处理库，提供更好的错误处理支持
thiserror = "1.0"   # 错误处理库，支持自定义错误类型

###############
# 并发相关
###############
rayon = "1.7"       # 并发库，提供数据并行处理的功能
itertools = "0.11"  # 迭代器库，提供更多的迭代器类型和操作

###############
# 图像处理相关
###############
bmp = "0.5.0"       # BMP 图像文件解析库

###############
# 序列化相关
###############
ron = "0.8"                                      # RON 格式序列化库
serde = { version = "1", features = ["derive"] } # 序列化库，支持自动派生
serde_json = "1.0"                               # JSON 格式序列化库
toml = "0.8"                                     # TOML 格式解析库

###############
# 生命周期相关
###############
require_lifetimes = "0.3.0"     # 生命周期库，提供更好的生命周期支持

###############
# 随机数相关
###############
rand = "0.8.5"          # 随机数库
rand_chacha = "0.3.1"   # ChaCha20 随机数生成器

###############
# 命令行相关
###############
clap = { version = "4", features = ["derive"] }     # 命令行参数解析库，支持自动派生

###############
# 网络相关
###############
axum = "0.6" # Web 框架
reqwest = { version = "0.11", features = ["blocking"] } # HTTP 客户端库，支持同步和异步方式
tokio = { version = "1", features = ["full"] }          # 异步运行时库

###############
# 系统调用相关
###############
libc = "0.2"    # C 库绑定库

###############
# 测试相关
###############
assert_cmd = "2.0" # 测试库，提供方便的命令行测试工具
predicates = "3.0" # 测试库，提供更多的测试断言

###############
# 其他
###############
tracing = "0.1"         # 分布式跟踪库
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
] }                     # 分布式跟踪库，支持从环境变量中读取配置
dyn-clonable = "0.9.0"  # 动态克隆库
bufstream = "0.1.4"     # 缓冲流库
chrono = "0.4"          # 时间库

